--- a/package.json
+++ b/package.json
@@ -1,63 +1,18 @@
 {
-  "name": "tinymce",
+  "name": "pendulums-editor",
   "version": "4.8.3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tinymce/tinymce.git"
+    "url": "https://github.com/Swing-team/pendulums-editor.git"
   },
-  "description": "TinyMCE rich text editor",
-  "author": "Ephox Corporation",
+  "description": "Pendulums editor rich text editor",
+  "author": "Swing team",
   "bugs": {
-    "url": "https://github.com/tinymce/tinymce/issues"
+    "url": "https://github.com/Swing-team/pendulums-editor/issues"
   },
   "license": "LGPL-2.1",
   "private": true,
   "engines": {
     "node": ">=0.10.26"
-  },
-  "scripts": {
-    "test": "grunt bedrock-auto:chrome-headless",
-    "lint": "tslint src/**/*.ts",
-    "postinstall": "rimraf node_modules/@ephox/alloy/node_modules"
-  },
-  "dependencies": {
-    "@ephox/alloy": "2.2.3",
-    "@ephox/boulder": "3.2.1",
-    "@ephox/darwin": "latest",
-    "@ephox/dom-globals": "latest",
-    "@ephox/imagetools": "latest",
-    "@ephox/katamari": "latest",
-    "@ephox/robin": "latest",
-    "@ephox/sand": "latest",
-    "@ephox/snooker": "latest",
-    "@ephox/sugar": "latest"
-  },
-  "devDependencies": {
-    "@ephox/agar": "latest",
-    "@ephox/bedrock": "latest",
-    "@ephox/mcagar": "latest",
-    "@ephox/swag": "latest",
-    "awesome-typescript-loader": "^5.2.0",
-    "grunt": "~1.0.2",
-    "grunt-contrib-clean": "~1.1.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-less": "~1.4.1",
-    "grunt-contrib-uglify": "~3.3.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-nuget-pack": "^0.0.6",
-    "grunt-replace": "^1.0.1",
-    "grunt-shell": "^2.1.0",
-    "grunt-tslint": "^5.0.1",
-    "grunt-webpack": "^3.1.2",
-    "less-plugin-autoprefix": "^1.5.1",
-    "load-grunt-tasks": "^4.0.0",
-    "moxie-zip": "~0.0.3",
-    "tslint": "^5.9.1",
-    "ts-loader": "^4.4.2",
-    "typescript": "^2.6.2",
-    "webpack": "^4.8.3",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-livereload-plugin": "^2.1.1",
-    "rimraf": "^2.6.2"
   }
 }
